Fixed CSS layout issues with main article body

--- a/styles/home.css
+++ b/styles/home.css
@@ -114,45 +114,25 @@ button:hover {
 }
 
 .main-article-block {
-  display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
     align-items: stretch;
     width: 100%;
     height: 350px;
     max-width: 1208px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
     position: relative;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 12px auto 0 auto;
+    margin: 30px auto 0 auto;
     border: 1px solid white;
     border-radius: 7.5px;
 }
 
 .main-article {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     height: 100%;
     width: 100%;
     margin-right: 24px;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
     flex: 0 1 auto;
     flex-grow: 0;
     flex-shrink: 1;
@@ -161,4 +141,9 @@ button:hover {
 
 .main-article-post {
   width: 100%;
+}
+
+.col {
+  background-color: grey;
+  border: 2px solid black;
 }
